fixed page overflow

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -83,7 +83,6 @@ section.hero-section-three{
 
 section.hero-section-three img{
   width:100%;
-  float: left;
 }
 
 section.hero-section-three p{
@@ -92,6 +91,6 @@ section.hero-section-three p{
   color:#595959;
   top:0;
   margin-top: -1%;
-  padding-left: 13.5%;
+  padding-left: 14.5%;
   font-size: 4.25vw;
 }
